syntax = "proto3";

package inventory;


option go_package = "auto_grocery/inventory/proto";


service InventoryService {
  
  rpc CheckAvailability (CheckAvailabilityRequest) returns (CheckAvailabilityResponse);


  rpc ReserveItems (ReserveItemsRequest) returns (ReserveItemsResponse);

  
  rpc ReleaseItems (ReleaseItemsRequest) returns (ReleaseItemsResponse);

  
  rpc RestockItems (RestockItemsRequest) returns (RestockItemsResponse);

  
  rpc ReportJobStatus (ReportJobStatusRequest) returns (ReportJobStatusResponse);

  
  rpc BillAndPay (BillRequest) returns (BillResponse);

  
  rpc GetInventoryMetrics (GetInventoryMetricsRequest) returns (GetInventoryMetricsResponse);
}


message CheckAvailabilityRequest {
  repeated string skus = 1; 
}

message CheckAvailabilityResponse {
  map<string, ItemDetail> items = 1;
}

message ItemDetail {
  string sku = 1;
  string name = 2;
  string aisle_type = 3;
  int32 quantity_available = 4;
}


message ReserveItemsRequest {
  string order_id = 1;
  map<string, int32> items = 2; 
}

message ReserveItemsResponse {
  string order_id = 1;
  map<string, int32> items = 2; 
  bool success = 3; 
}


message ReleaseItemsRequest {
  string order_id = 1;
  map<string, int32> items = 2; 
}

message ReleaseItemsResponse {
  bool success = 1; 
}


message RestockItemsRequest {
  string supplier_id = 1;
  repeated RestockItem items = 2;
}

message RestockItem {
  string sku = 1;
  string name = 2;
  string aisle_type = 3;
  int32 quantity = 4;
  string mfd_date = 5;
  string expiry_date = 6;
  double unit_cost = 7; 
}

message RestockItemsResponse {
  bool success = 1; 
}


message ReportJobStatusRequest {
  string order_id = 1;
  string robot_id = 2;
  string status = 3; 
  map<string, int32> items = 4;
}

message ReportJobStatusResponse {
  bool success = 1; 
}


message BillRequest {
  string order_id = 1;
  map<string, int32> items = 2; 
}

message BillResponse {
  string order_id = 1;
  map<string, int32> items = 2; 
  bool success = 3;
  double total_price = 4; 
}


message GetInventoryMetricsRequest {
  repeated string skus = 1; 
}

message InventoryMetric {
  string sku = 1;
  int32 quantity = 2;
  double unit_cost = 3; 
}

message GetInventoryMetricsResponse {
  repeated InventoryMetric metrics = 1;
}